--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
             <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
             <groupId>jakarta.websocket</groupId>
             <artifactId>jakarta.websocket-api</artifactId>
             <version>2.1.1</version>
@@ -120,10 +124,7 @@
                 <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                 <version>3.5.10.1</version>
             </dependency>
-            <dependency>
-                <groupId>org.springframework.ai</groupId>
-                <artifactId>spring-ai-xunfei-spark</artifactId>
-            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
