--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,7 @@
             <artifactId>gson</artifactId>
             <version>2.8.9</version>
         </dependency>
+        <!-- 添加Spring AI音频处理依赖 -->
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -124,7 +125,6 @@
                 <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                 <version>3.5.10.1</version>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
 
@@ -136,5 +136,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
