--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,8 +7,8 @@ spring:
       chat:
         model: deepseek-r1:8b
     openai:
-      api-key: sk-6ba44564c1ab4c80b1e012a7fb89dd87
-      base-url: https://dashscope.aliyuncs.com/compatible-mode
+      api-key: sk-XwqqE4PPerJzvDvRryMq10D3q2q3Gaoq8yX6bHyck4Jf1CCJ
+      base-url: https://ai.nengyongai.cn/v1
       chat:
         options:
           model: qwen-max-latest
@@ -61,7 +61,7 @@ logging:
     org.springframework.ai: debug
     com.tmd.ai: debug
 server:
-  port: 8080
+  port: 8082
 
 # WebSocket连接池配置
 apiwebsocket:
